apid.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.service.loadBalancerIP: 35.225.182.66
    kompose.service.type: LoadBalancer
    kompose.service.updateStrategy: RollingUpdate
    kompose.version: 1.25.0 (a70f80cc)
  creationTimestamp: null
  labels:
    io.kompose.service: api-db
  name: api-db
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: api-db
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert
        kompose.service.loadBalancerIP: 35.225.182.66
        kompose.service.type: LoadBalancer
        kompose.service.updateStrategy: RollingUpdate
        kompose.version: 1.25.0 (a70f80cc)
      creationTimestamp: null
      labels:
        io.kompose.service: api-db
    spec:
      containers:
        - image: gcr.io/mi-propject2/apidb:latest
          name: api-db
          ports:
            - containerPort: 3010
          resources: {}
      restartPolicy: Always
status: {}
