sendersdeployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.service.type: ClusterIp
    kompose.service.updateStrategy: RollingUpdate
    kompose.version: 1.25.0 (a70f80cc)
  creationTimestamp: null
  labels:
    io.kompose.service: senders-api
  name: senders-api
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: senders-api
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert
        kompose.service.type: ClusterIp
        kompose.service.updateStrategy: RollingUpdate
        kompose.version: 1.25.0 (a70f80cc)
      creationTimestamp: null
      labels:
        io.kompose.service: senders-api
    spec:
      containers:
        - image: gcr.io/mi-propject2/senderrabbit:latest
          name: senders-api
          ports:
            - containerPort: 3005
          resources: {}
      restartPolicy: Always
status: {}
