apis.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.service.loadBalancerIP: 35.197.80.219
    kompose.service.type: LoadBalancer
    kompose.service.updateStrategy: RollingUpdate
    kompose.version: 1.25.0 (a70f80cc)
  creationTimestamp: null
  labels:
    io.kompose.service: api-db-tcp
  name: api-db-tcp
spec:
  ports:
    - name: "3010"
      port: 3010
      targetPort: 3010
  selector:
    io.kompose.service: api_db
  type: LoadBalancer
  loadBalancerIP: "35.197.80.219"
status:
  loadBalancer: 
    ingress:
    - ip: 35.197.80.219
