kafkadeploy.yaml
## deployment zookeper
kind: Deployment
apiVersion: apps/v1
metadata:
  name: zookeeper-deploy
  namespace: squidgames
spec:
  replicas: 2
  selector:
    matchLabels:
      app: zookeeper-1
  template:
    metadata:
      labels:
        app: zookeeper-1
    spec:
      containers:
      - name: zoo1
        image: digitalwonderland/zookeeper
        ports:
        - containerPort: 2181
---
##expose service zookeper
apiVersion: v1
kind: Service
metadata:
  name: zoo1
  namespace: squidgames
  labels:
    app: zookeeper-1
spec:
  ports:
  - name: client
    port: 2181
    protocol: TCP
  - name: follower
    port: 2888
    protocol: TCP
  - name: leader
    port: 3888
    protocol: TCP
  selector:
    app: zookeeper-1

---

##deploying kafka
apiVersion: v1
kind: Service
metadata:
  name: kafka-service
  namespace: squidgames
  labels:
    name: kafka
spec:
  ports:
  - port: 9092
    name: kafka-port
    protocol: TCP
  selector:
    app: kafka
    id: "0"
  type: LoadBalancer

---
##deploy kafka brocker

kind: Deployment
apiVersion: apps/v1
metadata:
  name: kafka-broker0
  namespace: squidgames
spec:
  replicas: 2
  selector:
    matchLabels:
        app: kafka
        id: "0"
  template:
    metadata:
      labels:
        app: kafka
        id: "0"
    spec:
      containers:
      - name: kafka
        image: wurstmeister/kafka
        ports:
        - containerPort: 9092
---
