clientes.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.service.type: ClusterIP
    kompose.service.updateStrategy: RollingUpdate
    kompose.version: 1.25.0 (a70f80cc)
  creationTimestamp: null
  labels:
    io.kompose.service: clientes1
  name: clientes1
  namespace: squidgames
spec:
  replicas: 2
  selector:
    matchLabels:
      io.kompose.service: clientes1
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert
        kompose.service.type: ClusterIP
        kompose.service.updateStrategy: RollingUpdate
        kompose.version: 1.25.0 (a70f80cc)
        linkerd.io/inject: enabled
      creationTimestamp: null
      labels:
        io.kompose.service: clientes1
    spec:
      containers:
        - image:  mdmata/grpcclienterabbitv2:latest
          name: clientes-rabbit
          resources: {}
      restartPolicy: Always
status: {}
---
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.service.type: ClusterIP
    kompose.service.updateStrategy: RollingUpdate
    kompose.version: 1.25.0 (a70f80cc)
  creationTimestamp: null
  labels:
    io.kompose.service: clientes1-tcp
  name: clientes1-tcp
  namespace: squidgames
spec:
  ports:
    - port: 8080
      protocol: TCP
      targetPort: 8080
  selector:
    io.kompose.service: clientes1
  type: ClusterIP
status:
  loadBalancer: {}
---
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.service.type: ClusterIP
    kompose.service.updateStrategy: RollingUpdate
    kompose.version: 1.25.0 (a70f80cc)
  creationTimestamp: null
  labels:
    io.kompose.service: clientes2
  name: clientes2
  namespace: squidgames
spec:
  replicas: 2
  selector:
    matchLabels:
      io.kompose.service: clientes2
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert
        kompose.service.type: ClusterIP
        kompose.service.updateStrategy: RollingUpdate
        kompose.version: 1.25.0 (a70f80cc)
        linkerd.io/inject: enabled
      creationTimestamp: null
      labels:
        io.kompose.service: clientes2
    spec:
      containers:
        - image:  mdmata/grpcclientekafka:latest
          name: clientes-kafka
          resources: {}
      restartPolicy: Always
status: {}
---
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.service.type: ClusterIP
    kompose.service.updateStrategy: RollingUpdate
    kompose.version: 1.25.0 (a70f80cc)
  creationTimestamp: null
  labels:
    io.kompose.service: clientes2-tcp
  name: clientes2-tcp
  namespace: squidgames
spec:
  ports:
    - port: 8080
      protocol: TCP
      targetPort: 8080
  selector:
    io.kompose.service: clientes2
  type: ClusterIP
status:
  loadBalancer: {}
---
apiVersion: networking.k8s.io/v1 
kind: Ingress 
metadata: 
  name: balance-sopes1
  namespace: squidgames
  annotations:
    traefik.ingress.kubernetes.io/affinity: "true"
    kubernetes.io/ingress.class: nginx 
    nginx.ingress.kubernetes.io/rewrite-target: / 
    nginx.ingress.kubernetes.io/service-upstream: "true"
spec: 
  rules: 
  - host: 34.71.104.182.nip.io
    http:
      paths:
      - path: "/api" 
        pathType: Prefix 
        backend: 
          service:
            name: cliente
            port: 
              number: 8080
