ingresss.yaml
apiVersion: networking.k8s.io/v1 
kind: Ingress 
metadata: 
  name: balance-sopes1
  namespace: squidgames
  annotations:
    traefik.ingress.kubernetes.io/affinity: "true"
    kubernetes.io/ingress.class: nginx 
    nginx.ingress.kubernetes.io/rewrite-target: / 
    nginx.ingress.kubernetes.io/service-upstream: "true"
spec: 
  rules: 
  - host: 104.154.75.222.nip.io
    http:
      paths:
      - path: "/" 
        pathType: Prefix 
        backend: 
          service:
            name: senders-api-tcp 
            port: 
              number: 80
